--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
+    "@types/node": "^22.5.4",
+    "@vitejs/plugin-vue": "^5.1.3",
     "@vue/runtime-core": "^3.5.4",
     "sass": "^1.78.0",
-    "sass-loader": "^16.0.1"
+    "sass-loader": "^16.0.1",
+    "typescript": "^5.6.2"
   }
 }
