--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vue/runtime-core": "^3.5.4",
