--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
     "moduleResolution": "node",
+    "types": ["@types/node", "./types"],
     "paths": {
       "*": ["node_modules/*"]
     }
